# reviewtime

./: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  config.example.yaml  config.mock.yaml  pyproject.toml
reports/: weekly-summary_2024-01-01_to_2024-01-07.md
site/: hugo.toml  hugo_stats.json
site/themes/weekly-summary/: theme.toml
site/themes/weekly-summary/layouts/_default/: baseof.html  list.html  single.html
site/themes/weekly-summary/layouts/partials/: footer.html  header.html
site/themes/weekly-summary/static/css/: style.css
src/weekly_summary/: __init__.py  cli.py  summarizer.py
src/weekly_summary/connectors/: __init__.py  base.py  email.py  github.py  mock.py  slack.py
src/weekly_summary/report/: generator.py
src/weekly_summary/utils/: __init__.py  date_utils.py
tests/: __init__.py  test_activity.py  test_cli.py  test_cli_config.py  test_date_utils.py  test_mock_connectors.py  test_report_generator.py  test_summarizer.py
